--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -15,13 +15,22 @@
         android:layout_height="wrap_content"
         android:textColor="#FF0000"
         android:text="Score: 0"
-        android:id="@+id/score"/>
+        android:id="@+id/score"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="11dp"
+        android:layout_marginStart="11dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#FF0000"
         android:text="Life: 3"
-        android:layout_below="@id/score"
-        android:id="@+id/life"/>
+        android:id="@+id/life"
+        android:layout_marginRight="92dp"
+        android:layout_marginEnd="92dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
